// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWSLambdaFunctionProvider where there are is a function creates aws functions 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazon.com/iam-role-arn": "arn:aws:iam::123456789012:role/lambdaRole",
                "amazon.com/lambda-function-arn": "arn:aws:lambda:eu-west-1:123456789012:function:my-function",
                "backstage.io/managed-by-location": "aws-lambda-function-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-lambda-function-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/lambda/home?region=eu-west-1#/functions/my-function",
              },
              "architectures": [
                "x86_64",
              ],
              "description": "",
              "ephemeralStorage": 512,
              "labels": {
                "Owner-test": "engineering",
                "owner": "wrong",
              },
              "memorySize": 1024,
              "name": "bc6fa48d05a0a464c5e2a5214985bd957578cd50314fc6076cef1845fadb3c8",
              "runtime": "nodejs14.x",
              "timeout": 30,
              "title": "my-function",
            },
            "spec": {
              "owner": "wrong",
              "type": "lambda-function",
            },
          },
          "locationKey": "aws-lambda-function-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;

exports[`AWSLambdaFunctionProvider where there are is a function creates aws functions with a template 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazon.com/iam-role-arn": "arn:aws:iam::123456789012:role/lambdaRole",
                "amazon.com/lambda-function-arn": "arn:aws:lambda:eu-west-1:123456789012:function:my-function",
                "backstage.io/managed-by-location": "aws-lambda-function-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-lambda-function-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/lambda/home?region=eu-west-1#/functions/my-function",
              },
              "name": "bc6fa48d05a0a464c5e2a5214985bd957578cd50314fc6076cef1845fadb3c8",
              "title": "my-function",
            },
          },
          "locationKey": "aws-lambda-function-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;
